--- a/src/pages/Bulletin/Bulletin.css
+++ b/src/pages/Bulletin/Bulletin.css
@@ -1,5 +1,5 @@
 /* bulletin.css */
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;400;600&display=swap");
 
 .bulletin-page {
   min-height: 100vh;
@@ -8,7 +8,7 @@
   justify-content: flex-start; /* changed from center */
   align-items: center;
   padding: 3rem 2rem 2rem; /* top padding reduced */
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 .bulletin-title {
@@ -40,3 +40,5 @@
   background-color: #0056b3;
   color: #fff;
 }
+
+/* fffff?? */
